--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ authors = ["Tiemen Waterreus <tiemen@tiemenwaterreus.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "hamming"
+path = "src/lib/lib.rs"
+
+[[bin]]
+name = "hamming"
+path = "src/main.rs"
 
 [dependencies]
 rand = "0.7"
